--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,52 +21,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pylint pytest pytest-cov bandit
+        pip install -r requirements-dev.txt
+        pip install pylint bandit
         
     - name: Run linting
       run: |
-        pylint --rcfile=pyproject.toml $(git ls-files '*.py')
+        pylint --rcfile=pyproject.toml lib/ tests/ app.py
         
     - name: Run security scan
       run: |
         bandit -r .
         
-    # - name: Run tests with coverage
-    #   run: |
-    #     pytest
-        
-    # - name: Upload coverage to Codecov
-    #   uses: codecov/codecov-action@v5
-    #   with:
-    #     file: ./coverage.xml
-        
-  deploy:
-    needs: test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-        
-    - name: Install CDK dependencies
+    - name: Run infrastructure tests
       run: |
-        npm install -g aws-cdk
-        cd infrastructure  # Assuming your CDK code is in an infrastructure directory
-        npm install
+        pytest tests/test_dynamodb_stack.py -v
         
-    - name: Deploy with CDK
-      run: |
-        cd infrastructure
-        cdk deploy --require-approval never
